<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:paddingTop="5dp"
    android:paddingLeft="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="40dp"
    android:layout_marginRight="10dp"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_marginRight="20dp"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="@android:color/white"
        android:scaleType="fitXY"
         />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/profile_pic">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:allowUndo="true" />
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/party"
            android:layout_width="wrap_content"
            android:textColor="#2196F3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content"
            android:text="@string/party" />
        <TextView
            android:id="@+id/email"
            android:autoLink="email"
            android:linksClickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="10dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/website"
            android:autoLink="web"
            android:linksClickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textSize="10dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Button
        android:focusable="false"
        android:id="@+id/moreInfoButton"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:onClick="detailClickHandler"
        android:text="more info"
        android:gravity="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:background="@color/buttonBlue"
        android:layout_alignBottom="@+id/profile_pic"
        android:layout_toEndOf="@+id/profile_pic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/twitter_logo"
            android:layout_marginRight="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/twitter"
            android:layout_marginTop="170dp"
            android:paddingTop="10dp"/>
        <TextView
            android:id="@+id/tweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/tweet"
            android:layout_alignTop="@+id/twitter_logo"
            android:layout_toEndOf="@+id/twitter_logo" />
    </RelativeLayout>

    <!--<FrameLayout-->
        <!--android:layout_marginTop="300dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:twittersdk="http://schemas.android.com/apk/res-auto">-->

        <!--<com.twitter.sdk.android.tweetui.TweetView-->
            <!--android:id="@+id/bike_tweet"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--twittersdk:tw__tweet_id="510908133917487104"/>-->

    <!--</FrameLayout>-->
</RelativeLayout>