<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_marginRight="20dp"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/profile_pic">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:allowUndo="true" />
            <!--TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" /-->
            <TextView
                android:id="@+id/party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/party" />
        </LinearLayout>

        <TextView
            android:id="@+id/term"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:onClick="detailClickHandler"
            android:text="@string/term"
            android:layout_alignBottom="@+id/profile_pic"
            android:layout_toEndOf="@+id/profile_pic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="180dp"
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="Committees Currently Serves On" />
            <TextView
                android:id="@+id/committes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
            <TextView
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Recent Bills Sponsored" />
            <TextView
                android:id="@+id/bills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
